--- a/config-single-client-dev.yml
+++ b/config-single-client-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch,springcloud-config/config-single-client-dev.yml version=88"
+  info: "master branch,springcloud-config/config-single-client-dev.yml version=5201314"
